kubernetes/3-aws-lbc/1.deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 5-example
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: 5-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-195:v2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
---
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/service/annotations/
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 5-example
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    # service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp


# test
# kubectl get endpoints myapp
# kubectl get pod -o wide -n 5-example
# Test Application
# curl -i http://k8s-3example-myapp-1aba8b3a35-6dbaaa39b27155fb.elb.us-east-2.amazonaws.com:8080/about
