kubernetes/3-aws-lbc/2.deploy-ssl.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 6-example
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: 6-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-195:v2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 6-example
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp

---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: 6-example
  annotations:
    # For SSL
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:424432388155:certificate/7f32327d-ad95-4977-91c2-8fae85e9e598 # AWS Certificate Manager ARN
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080

# Check 
# kubectl get ingress -n 6-example
# kubectl get ing -n 6-example

# Test application
# curl -i --header "Host: myapp.example.com" k8s-3example-myapp-10a79849fe-212514874.us-east-2.elb.amazonaws.com/about
# curl -i --header "Host: myapp.example.com" http://<ALB-DNS>/about
